--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Plot Point</title>
-    <meta name="description" content="">
+    <meta name="description" content="Outline and Plotting Tool for Writers!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
